--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="../image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="../image/png" sizes="32x32" href="../images/favicon-32x32.png">
     
     <title>Frontend Mentor | QR code component</title>
 </head>
@@ -18,7 +18,7 @@
 <body>
     <article class="container">
         <header class="qr-code">
-            <img src="./images/image-qr-code.png" alt="QR-CODE" class="qr-code__img">
+            <img src="../images/image-qr-code.png" alt="QR-CODE" class="qr-code__img">
         </header>
         <main class="description">
             <h2 class="description__title">Improve your front-end skills by building projects</h2>
